--- a/_src/styl/parts/slice-price-table.styl
+++ b/_src/styl/parts/slice-price-table.styl
@@ -1,6 +1,7 @@
 .slice.price-table
     .price-table-main
         lost-center 800px
+        height 323px
         lost-utility clearfix
         ul.price:first-child
             margin-bottom: 20px            
