--- a/_includes/parts/intro-page.html
+++ b/_includes/parts/intro-page.html
@@ -1,6 +1,6 @@
 <section class="intro-page">
     <div class="intro-page-img">
-        <img src="/assets/img/{{ page.image }}.jpg" alt="Ilustração do banner sobre {{ page.title }}" />
+        <img src="/assets/img/{{ page.image }}" alt="Ilustração do banner sobre {{ page.title }}" />
     </div>
     <div class="intro-style"></div>
     <div class="intro-page-inner center">
