--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     {% endfor %}
-    <div class="part sidebar-item">
+    <div class="sidebar-item sidebar-facebook">
         <div class="fb-page" data-href="https://www.facebook.com/{{ site.face_username }}/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/{{ site.face_username }}/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/{{ site.face_username }}/">{{ site.face_username }}</a></blockquote>
         </div>
     </div>
