--- a/_src/styl/pages/page.styl
+++ b/_src/styl/pages/page.styl
@@ -37,11 +37,12 @@
                         overflow: hidden
                         background: white
                         lost-utility clearfix
-                        .part-title:first-child
-                            margin-top 0
                         .part-title
                             text-align: left
-                            margin-bottom: 15px
+                            margin 20px 0 15px
+                            padding-bottom: 15px
+                            border-bottom 2px solid colorp
                             i.fa
-                                color cinza
+                                color colorp
+                                margin-right: 5px
     
