--- a/_src/styl/pages/page-404.styl
+++ b/_src/styl/pages/page-404.styl
@@ -1,7 +1,7 @@
 .page.error404
     .page-content
-        lost-center 420px
-        text-align: center
+        lost-center 600px
+        text-align center
         ul
             margin-top 20px
             text-align: left
