--- a/_src/styl/pages/page-contato.styl
+++ b/_src/styl/pages/page-contato.styl
@@ -1,6 +1,6 @@
 .page.contato
     .page-content
-        .sidemain
+        .main
             form
                 .form-inner
                     lost-utility clearfix
