--- a/_src/styl/pages/page-cupons.styl
+++ b/_src/styl/pages/page-cupons.styl
@@ -1,6 +1,6 @@
-.page.oferta
+.page.cupons
     .page-content
-        .sidemain
+        .main
             .part-content
                 .part-content-inner
                     .oferta-features
