--- a/_src/styl/pages/page-sobre.styl
+++ b/_src/styl/pages/page-sobre.styl
@@ -1,6 +1,6 @@
 .page.sobre
     .page-content
-        .sidemain
+        .main
             .part-content
                 .part-content-inner
                     margin-bottom 20px
