--- a/_src/styl/pages/page-two-columns.styl
+++ b/_src/styl/pages/page-two-columns.styl
@@ -1,13 +1,13 @@
-.page
-    .main
+.page-two-column
+    .content
         margin-bottom 10px
-        .main-inner
+        .content-inner
             padding 20px
             .page-content
                 lost-utility clearfix
                 .sidebar
                     lost-column 4/14 2
-                .sidemain
+                .main
                     lost-column 10/14 2
                     overflow: hidden
                     background: white
