--- a/_src/styl/style.styl
+++ b/_src/styl/style.styl
@@ -12,19 +12,10 @@
 @import "/globals/_home-mob"
 @import "/globals/_header-mob"
 @import "/globals/_footer-mob"
-@import "/pages/page-adicional"
-@import "/pages/_page-adicional-mob"
 @import "/pages/page-area"
 @import "/pages/_page-area-mob"
-@import "/pages/page-info"
-@import "/pages/_page-info-mob"
-@import "/pages/page-info2"
-@import "/pages/_page-info2-mob"
-@import "/pages/page-produtos"
-@import "/pages/_page-produtos-mob"
-@import "/pages/page-destaques"
-@import "/pages/page-oferta"
-@import "/pages/_page-oferta-mob"
+@import "/pages/page-cupons"
+@import "/pages/_page-cupons-mob"
 @import "/pages/page-404"
 @import "/pages/page-blog"
 @import "/pages/_page-blog-mob"
@@ -32,8 +23,10 @@
 @import "/pages/_page-contato-mob"
 @import "/pages/page-sobre"
 @import "/pages/_page-sobre-mob"
-@import "/pages/page"
-@import "/pages/_page-mob"
+@import "/pages/page-one-columns"
+@import "/pages/_page-one-columns-mob"
+@import "/pages/page-two-columns"
+@import "/pages/_page-two-columns-mob"
 @import "/parts/_modal"
 @import "/parts/share"
 @import "/parts/intro-home"
