--- a/_src/styl/parts/_cards-mob.styl
+++ b/_src/styl/parts/_cards-mob.styl
@@ -1,43 +1,43 @@
 .cards-group
     +below(1200px)
         ul.cards
-            li.inner-cards
-                .title-cards-group
-                    .title-cards
+            li.cards-inner
+                .cards-title-group
+                    .cards-title
                         font-size: 26px
     +below(1100px)
         ul.cards
-            li.inner-cards
+            li.cards-inner
                 padding: 20px
-                .title-cards-group
-                    .title-cards
+                .cards-title-group
+                    .cards-title
                         font-size: 24px
     +below(1000px)
         padding-top: 30px
         ul.cards
-            li.inner-cards
-                .title-cards-group
+            li.cards-inner
+                .cards-title-group
                     height 48px
-                    i.icon-cards
+                    i.cards-icon
                         width 38px
                         height 38px
                         font-size: 40px
-                    .title-cards
+                    .cards-title
                         font-size: 20px
                         line-height: 1
-                .content-cards-group
+                .cards-content-group
                     height 290px
     +below(900px)
         ul.cards
-            li.inner-cards
-                .title-cards-group
-                    .title-cards
+            li.cards-inner
+                .cards-title-group
+                    .cards-title
                         font-size: 18px
     +below(break-nav)
         ul.cards
-            li.inner-cards:not(:last-child)
+            li.cards-inner:not(:last-child)
                 margin-bottom: 10px
-            li.inner-cards
+            li.cards-inner
                 lost-column 1/1 1 0
                 border-radius 0
                 display flex
@@ -45,19 +45,19 @@
                 padding 0 30px 0 15px
                 height 70px
                 border none
-                .title-cards-group
+                .cards-title-group
                     display flex
                     align-items center
                     lost-column 9/10 3 0
-                    .title-cards
+                    .cards-title
                         font-size: 28px
                         line-height: 24px
                         margin 0
-                .content-cards-group
+                .cards-content-group
                     display none
-                .btn-cards-group
+                .cards-btn-group
                     lost-column 1/10 3 0
-                    .saibamais-cards
+                    .cards-saibamais
                         border 0
                         padding 0
                         width 40px
@@ -69,10 +69,10 @@
                             font-weight: bold
     +below(340px)
         ul.cards
-            li.inner-cards
-                .title-cards-group
-                    i.icon-cards
+            li.cards-inner
+                .cards-title-group
+                    i.cards-icon
                         width 42px
                         font-size: 40px
-                    .title-cards
+                    .cards-title
                         font-size: 24px
