--- a/_includes/parts/slice-price-table.html
+++ b/_includes/parts/slice-price-table.html
@@ -3,7 +3,7 @@
 		<h2 class="slice-title price-table-title">{{ site.slice_price-table_title }}</h2>
 		<p class="slice-subtitle price-table-subtitle">{{ site.slice_price-table_description }}</p>
 		<div class="price-table-main">
-			<div id="carousel-price">
+			<div class="carousel-price">
 				{% for post in site.tags.price %}
 				<div class="item">
 					<ul class="price">
