--- a/_src/styl/parts/slice-price-table.styl
+++ b/_src/styl/parts/slice-price-table.styl
@@ -1,51 +1,49 @@
 .slice.price-table
     .price-table-main
-        lost-center 800px
-        height 323px
-        lost-utility clearfix
-        ul.price:first-child
-            margin-bottom: 20px            
-        ul.price
-            lost-column 1/3 3 
-            background: white
-            padding 0 0 20px
-            li.price-field
-                text-align: center
-                color texts
-                font-size: 16px
-                border-bottom 3px solid cinza
-                margin 10px 20px
-                padding 7px 0
-                small
-                    font-size: 11px
-            li.price-btn
-                text-align: center
-            li.price-velocidade.fibra
-                background: #87CDD2
-                p
-                    border-top 1px solid #87CDD2 + 20%
-                &:after
-                    border-top 12px solid #87CDD2
-            li.price-velocidade
-                position: relative
-                text-align: center
-                background: #EB5E50
-                font-weight: bold
-                font-size: 34px
-                padding 5px 20px
-                margin-bottom: 10px
-                p
-                    padding-top: 10px
-                    font-size: 18px
-                    border-top 2px solid #EB5E50 + 30%                    
-                &:after
-                    border-top 12px solid #EB5E50
-                    border-left 20px solid transparent
-                    border-right 20px solid transparent
-                    bottom -11px
-                    content ""
-                    position absolute
-                    left 50%
-                    margin-left -20px
-                    width 0
-                    height 0
+        .carousel-price
+            lost-center 800px
+            height 323px
+            .item
+                ul.price
+                    background: white
+                    padding 0 0 20px
+                    li.price-field
+                        text-align: center
+                        color texts
+                        font-size: 16px
+                        border-bottom 3px solid cinza
+                        margin 10px 20px
+                        padding 7px 0
+                        small
+                            font-size: 11px
+                    li.price-btn
+                        text-align: center
+                    li.price-velocidade.fibra
+                        background: #87CDD2
+                        p
+                            border-top 1px solid #87CDD2 + 20%
+                        &:after
+                            border-top 12px solid #87CDD2
+                    li.price-velocidade
+                        position: relative
+                        text-align: center
+                        background: #EB5E50
+                        font-weight: bold
+                        font-size: 34px
+                        padding 5px 20px
+                        margin-bottom: 10px
+                        p
+                            padding-top: 10px
+                            font-size: 18px
+                            border-top 2px solid #EB5E50 + 30%                    
+                        &:after
+                            border-top 12px solid #EB5E50
+                            border-left 20px solid transparent
+                            border-right 20px solid transparent
+                            bottom -11px
+                            content ""
+                            position absolute
+                            left 50%
+                            margin-left -20px
+                            width 0
+                            height 0
