--- a/_src/styl/pages/_page-two-columns-mob.styl
+++ b/_src/styl/pages/_page-two-columns-mob.styl
@@ -1,15 +1,13 @@
-.page-two-columns
+.page-two-column
     +below(800px)        
-        .main
-            .main-inner
+        .content
+            .content-inner
                 padding 0
                 .page-content
                     .sidebar
                         display none
-                    .sidemain
+                    .main
                         lost-column 1/1 1
-                        padding: 0
-                        .part-title
-                            margin 0 0 0 20px
-                        .part-title:first-child
-                            margin-top 25px
+                        padding: 0 20px 20px
+                        .part-header
+                            display none
