--- a/_src/styl/pages/_page-cupons-mob.styl
+++ b/_src/styl/pages/_page-cupons-mob.styl
@@ -1,7 +1,7 @@
-.page.oferta
+.page.cupons
     +below(768px)
         .page-content
-            .sidemain
+            .main
                 .part-content
                     .part-content-inner
                         .oferta-img
@@ -9,6 +9,7 @@
                         .oferta-features
                             lost-column 1/1 1 0
                         #form-newsletter
+                            margin-bottom: 0
                             .oferta-btn
                                 &:before
                                     content ""
