--- a/_src/styl/pages/_page-contato-mob.styl
+++ b/_src/styl/pages/_page-contato-mob.styl
@@ -1,7 +1,7 @@
 .page.contato
     +below(800px)
         .page-content
-            .sidemain
+            .main
                 form
                     .form-inner
                         .form-side
@@ -11,5 +11,3 @@
                                     lost-column 1/1 1
                                 .input-group
                                     lost-column 1/1 1
-                    .btn
-                        margin-bottom 20px
