--- a/_src/styl/pages/page-404.styl
+++ b/_src/styl/pages/page-404.styl
@@ -1,13 +1,17 @@
 .page.error404
-    .page-content
-        lost-center 600px
-        text-align center
-        ul
-            margin-top 20px
-            text-align: left
-            li
-                display list-item
-                list-style disc
-                list-style-position: inside
-        .btn
-            margin-top 20px
+    .content
+        .content-inner
+            .page-content
+                lost-center 600px
+                text-align center
+                .main
+                    padding 20px
+                    ul
+                        margin-top 20px
+                        text-align: left
+                        li
+                            display list-item
+                            list-style disc
+                            list-style-position: inside
+                    .btn
+                        margin-top 20px
