--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -867,31 +867,34 @@ h5 {
     content: "";
   }
 }
-.page.error404 .page-content {
+.page.error404 .content .content-inner .page-content {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
-.page.error404 .page-content:before {
+.page.error404 .content .content-inner .page-content:before {
   content: '';
   display: table;
 }
-.page.error404 .page-content:after {
+.page.error404 .content .content-inner .page-content:after {
   content: '';
   display: table;
   clear: both;
 }
-.page.error404 .page-content ul {
+.page.error404 .content .content-inner .page-content .main {
+  padding: 20px;
+}
+.page.error404 .content .content-inner .page-content .main ul {
   margin-top: 20px;
   text-align: left;
 }
-.page.error404 .page-content ul li {
+.page.error404 .content .content-inner .page-content .main ul li {
   display: list-item;
   list-style: disc;
   list-style-position: inside;
 }
-.page.error404 .page-content .btn {
+.page.error404 .content .content-inner .page-content .main .btn {
   margin-top: 20px;
 }
 .page.blog .page-content .part {
